Se configuro los cambios de estado para el rechazo: se agrego el modal para escribir el motivo

--- a/assets/css/sesion/usuarios.css
+++ b/assets/css/sesion/usuarios.css
@@ -550,4 +550,58 @@
     color: white; /* Texto blanco por defecto */
 }
 
+/* Estilo para el modal de motivo de rechazo */
+.modal_motivo_rechazo {
+    display: none;
+    color: #000;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Fondo semi-transparente */
+}
+
+.modal_motivo_rechazo h3{
+    color: #000;
+}
+
+/* Estilo del contenido del modal de rechazo */
+.modal_motivo_rechazo .modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border-radius: 8px;
+    width: 80%;
+    max-width: 300px;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+}
+
+/* Estilo para el textarea del motivo de rechazo */
+.modal_motivo_rechazo textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 14px;
+    resize: none;
+}
+
+/* Botón de Aceptar en el modal de rechazo */
+.modal_motivo_rechazo .btn-confirmar {
+    padding: 10px 20px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.modal_motivo_rechazo .btn-confirmar:hover {
+    background-color: #218838;
+}
+
 
